tests/e2e/scenarios/negative/runtime_exit_one.ks
// Expected phase: runtime — builtin `exit(1)` terminates with non-zero status.

exit(1)
